# MicroPythonESP32Embedding

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  build-flash-monitor.sh  sdkconfig.defaults
components/micropython/: CMakeLists.txt
components/micropython/cppif/: FileSysReader.cpp  FileSysReader.h  MicropyExecTask.h  Micropython.cpp  Micropython.h
components/micropython/ports/ric/: Makefile  MicropythonRICFns.h  help.c  main.c  mpconfigport.h  mphalport.c  mpthreadport.c
components/micropython/ports/ric/boards/: manifest_release.py
components/micropython/ports/ric/boards/ric2/: mpconfigboard.h
components/micropython/ports/ric/cmodules/example/: micropython.mk
main/: CMakeLists.txt  main.cpp
spiffs_image/: test.py
